# arhitektura-monolit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_OVERVIEW.md  MODULE-BOUNDARIES.md  Makefile  README.md  REFACTOR-PLAN.md  alembic.ini  architecture.mmd  pyproject.toml
.cursor/commands/: api-smoke.md  babysit-pr.md  code-review.md  flct.md  onboard.md  update-docs.md
.cursor/rules/: README.md  ai-agents.mdc  celery-workers.mdc  documents-lifecycle.mdc  english-only.mdc  fastapi-routes-facades.mdc  feature-placement.mdc  frontend-web-client.mdc  hexagonal-modules.mdc  module-boundaries.mdc  monolith-overview.mdc  ports-adapters.mdc  python-package-structure.mdc  quality-tooling.mdc
.cursor/skills/: README.md
.cursor/skills/api-smoke-testing/: SKILL.md
.cursor/skills/babysitting-pr/: SKILL.md
.cursor/skills/code-review/: SKILL.md
.cursor/skills/cortex-onboard/: SKILL.md
.cursor/skills/frontend-dev-starter/: SKILL.md
.cursor/skills/grinding-until-pass/: SKILL.md
.cursor/skills/parallel-exploring/: SKILL.md
.cursor/skills/python-tdd-with-uv/: SKILL.md
.cursor/skills/suggesting-cursor-rules/: SKILL.md
.cursor/skills/systematic-debugging/: SKILL.md
.cursor/skills/update-documentation/: SKILL.md
.cursor/skills/verifying-in-browser/: SKILL.md
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 001_baseline_schema.py  002_law_corpus_schema.py
apps/cortex-server/: pyproject.toml
apps/cortex-server/cortex_server/: deps.py  main.py
apps/cortex-server/cortex_server/middleware/: __init__.py  correlation.py  error_handling.py
apps/cortex-server/tests/: conftest.py  test_auth_sso.py  test_health.py
apps/cortex-worker/: pyproject.toml
apps/cortex-worker/cortex_worker/tasks/: __init__.py
apps/ingestion-worker/: pyproject.toml
apps/ingestion-worker/ingestion_worker/tasks/: __init__.py
apps/sync-worker/: pyproject.toml
apps/sync-worker/sync_worker/tasks/: __init__.py
apps/web-client/: Dockerfile  ONBOARDING.md  nginx.conf  package.json  pnpm-lock.yaml
apps/web-client/src/: App.tsx  index.css
apps/web-client/src/api/: client.ts  types.ts
apps/web-client/src/components/: AppLayout.tsx  Sidebar.tsx
apps/web-client/src/context/: AuthContext.tsx
apps/web-client/src/pages/: AuditLogPage.tsx  AuthCallbackPage.tsx  CaseDetailPage.tsx  CasesListPage.tsx  ChatPage.tsx  DocumentViewPage.tsx  LawsPage.tsx  LoginPage.tsx  SearchPage.tsx  SyncStatusPage.tsx  SystemStatusPage.tsx  TranslatePage.tsx
docs/: ARCHITECTURE-READY.md  README.md  UPOREDBA-PROJEKAT-2.md
docs/engineering/: README.md
docs/engineering/architecture/: architecture-ready.md  module-boundaries.md  overview.md
docs/engineering/decisions/: 0001-modular-monolith.md  0002-documents-module-status-ownership.md  0003-split-platform-modules.md  0004-split-sync-ingestion-workers.md  0005-cortex-models-single-orm-source.md  0006-celery-without-domain-events.md  0007-module-dms-sync-naming.md  0008-searchport-weaviate.md  0009-law-corpus-sync.md  README.md  template.md
docs/engineering/decisions/history/: refactor-plan.md
docs/engineering/how-we-work/: auth.md  cursor-for-the-team.md  feature-placement.md  first-feature.md  first-pr-checklist.md  hexagonal-layout.md  local-development.md  repository-structure.md
docs/engineering/plans/: law-corpus-sync.md
docs/engineering/reference/: comparison-project-2.md
docs/onboarding/: README.md  auth.md  checklist-prvi-pr.md  gde-sta-ide.md  hexagonal-layout.md  lokalni-razvoj.md  prvi-feature.md  struktura-repozitorijuma.md
docs/product/: README.md
infra/: .env.example  docker-compose.yml
infra/docker/: Dockerfile.python  entrypoint.sh
infra/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infra/k8s/cortex-server/: deployment.yaml
infra/k8s/cortex-worker/: deployment.yaml
infra/k8s/flower/: deployment.yaml
infra/k8s/ingestion-worker/: deployment.yaml
infra/k8s/neo4j/: statefulset.yaml
infra/k8s/postgres/: statefulset.yaml
infra/k8s/rabbitmq/: deployment.yaml
infra/k8s/redis/: deployment.yaml
infra/k8s/sync-worker/: deployment.yaml
infra/k8s/weaviate/: deployment.yaml
infra/k8s/web-client/: deployment.yaml
infra/neo4j/: seed.cypher
infra/postgres/: init.sql
libs/cortex-connectors/: pyproject.toml
libs/cortex-connectors/cortex_connectors/: __init__.py  factory.py
libs/cortex-connectors/cortex_connectors/alfresco/: stub_client.py
libs/cortex-connectors/cortex_connectors/blob/: port.py  stub_store.py
libs/cortex-connectors/cortex_connectors/law/: stub_source.py
libs/cortex-connectors/cortex_connectors/ocr/: stub_adapter.py
libs/cortex-connectors/tests/: test_connectors_factory.py
libs/cortex-core/: ARCHITECTURE-LAYERS.md  pyproject.toml
libs/cortex-core/cortex_core/: __init__.py  api_types.py  celery_app.py  correlation.py  db.py  enums.py  errors.py  ingestion_worker_celery.py  logging.py  models.py  registry.py  settings.py  sync_worker_celery.py  worker_celery.py
libs/cortex-core/cortex_core/agents/: state.py
libs/cortex-core/cortex_core/base/: __init__.py  repository.py  service.py
libs/cortex-core/cortex_core/domain/: __init__.py  exceptions.py
libs/cortex-core/cortex_core/infrastructure/llm/: stub_router.py
libs/cortex-core/cortex_core/infrastructure/redis/: __init__.py  agent_checkpoint.py  chat_repository.py  client.py  session_cache.py  sync_progress.py
libs/cortex-core/cortex_core/infrastructure/weaviate/: client.py  collection.py
libs/cortex-core/cortex_core/messaging/: tasks.py
libs/cortex-core/cortex_core/ports/: __init__.py  alfresco.py  cache.py  law_search.py  law_source.py  llm.py  ocr.py  search.py
libs/cortex-core/tests/: test_errors.py
libs/cortex-models/: pyproject.toml
libs/cortex-models/cortex_models/: __init__.py  audit.py  case.py  document.py  law_code.py  law_version.py  sync_job.py  user.py
libs/cortex-observability/: pyproject.toml
libs/cortex-observability/cortex_observability/: __init__.py
scripts/: README.md  app.toml  dev.sh  seed-neo4j.sh
