[project]
name = "cortex-server"
version = "0.1.0"
description = "Cortex AI monolith server — composition root (FastAPI wiring)"
requires-python = ">=3.12"
dependencies = [
    "cortex-core",
    "cortex-models",
    "module-platform",
    "module-documents",
    "module-chat",
    "module-sync",
    "module-ai",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
    "celery>=5.3",
    "neo4j>=5.0",
]

[tool.uv.sources]
cortex-core = { workspace = true }
cortex-models = { workspace = true }
module-platform = { workspace = true }
module-documents = { workspace = true }
module-chat = { workspace = true }
module-sync = { workspace = true }
module-ai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_server"]
