[project]
name = "cortex-worker"
version = "0.1.0"
description = "Cortex AI monolith Celery worker — bootstrap shell"
requires-python = ">=3.12"
dependencies = [
    "cortex-core",
    "module-alfresco",
    "module-ingestion",
    "celery>=5.3",
    "flower>=2.0",
    "httpx>=0.27",
]

[tool.uv.sources]
cortex-core = { workspace = true }
module-alfresco = { workspace = true }
module-ingestion = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_worker"]
