[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Cortex AI ingestion worker — Celery shell for module-ingestion"
requires-python = ">=3.12"
dependencies = [
    "cortex-core",
    "module-ingestion",
    "celery>=5.3",
]

[tool.uv.sources]
cortex-core = { workspace = true }
module-ingestion = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_worker"]
