[project]
name = "sync-worker"
version = "0.1.0"
description = "Cortex AI sync worker — Celery shell for module-dms-sync"
requires-python = ">=3.12"
dependencies = [
    "cortex-core",
    "module-dms-sync",
    "module-law-sync",
    "celery>=5.3",
]

[tool.uv.sources]
cortex-core = { workspace = true }
module-dms-sync = { workspace = true }
module-law-sync = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sync_worker"]
