[project]
name = "cortex-core"
version = "0.1.0"
description = "Shared models, schemas, and utilities for Cortex AI"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "weaviate-client>=4.0",
    "neo4j>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_core"]
