[project]
name = "cortex-models"
version = "0.1.0"
description = "Shared SQLAlchemy ORM models for Cortex AI"
requires-python = ">=3.12"
dependencies = [
    "cortex-core",
]

[tool.uv.sources]
cortex-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_models"]
